# butler

./: Cargo.toml  Makefile.toml  README.md  README_DEV.md  pubspec.yaml
flutter_sandbox/: butler-config.json  buttler  buttler-config.json
flutter_sandbox/application/: .packages  README.md  pubspec.yaml
flutter_sandbox/application/.dart_tool/: package_config.json  package_config_subset
flutter_sandbox/application/test/: application_test.dart
flutter_sandbox/reports/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  lcov.info
flutter_sandbox/sandbox/: .packages  README.md  pubspec.yaml
flutter_sandbox/sandbox/android/: local.properties
flutter_sandbox/services/: .packages  README.md  pubspec.yaml
releases/mac/: buttler
scripts/: add_uncovered_files_to_test_of_given_project.sh  flutter_repair.sh  get_pub_all.sh  make_launcher_icons.gradle  move_release_files.sh  run_coverage.sh
src/: butler.rs  butler.yml  buttler.rs  buttler.yml  command_runner.rs  logger.rs  logger_tags.rs  main.rs  paths.rs  shell_like_commands.rs
src/command_handlers/: cover_all_command_handler.rs  coverage_command_handler.rs  hello_command_handler.rs  install_command_handler.rs  list_files_command_handler.rs  map_json_command_handler.rs  mod.rs  run_command_handler.rs
src/subtasks/: add_uncovered_files_to_tests_task.rs  build_coverage_report.rs  clear_last_coverage_files.rs  collect_all_dart_files.rs  cwd.rs  dart_module_package_name.rs  mod.rs  modules_list_loader.rs  post_coverage_clean_up.rs  read_pubspec.rs
(+35 files in other folders)
