[package]
name = "butler"
version = "0.1.0"
authors = ["Carlos Mizabi <carlos@mizabi.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.1", features = ["yaml"] }
toml = "0.5.6"
maplit = "1.0.2"
lazy_static = "1.4.0"
colored = "1.9.3"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
regex = "1.3.3"
include_dir = "0.6.0"
glob = "0.3.0"
yaml-rust = "0.4.4"